--- a/gradle.properties
+++ b/gradle.properties
@@ -19,12 +19,13 @@ android.useAndroidX=true
 android.enableJetifier=true
 
 # Project versions
-COMPILE_SDK_VERSION=29
-MIN_SDK_VERSION=21
-TARGET_SDK_VERSION=29
 APPLICATION_ID=org.ituns.dialog
 APPLICATION_VERSION_CODE=1
 APPLICATION_VERSION_NAME=1.0.0
+APPLICATION_SDK_MIN=21
+APPLICATION_SDK_TARGET=30
+APPLICATION_SDK_COMPILE=30
+APPLICATION_BUILD_TOOLS=30.0.3
 
 # Test versions
 JUNIT_VERSION=4.13.1
@@ -32,6 +33,7 @@ RUNNER_VERSION=1.3.0
 ESPRESSO_VERSION=3.2.0
 
 # AndroidX versions
+MATERIAL_VERSION=1.2.1
 APPCOMPAT_VERSION=1.2.0
 CONSTRAINT_VERSION=2.0.4
 
