--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.1"
+        classpath "com.android.tools.build:gradle:4.1.2"
     }
 }
 
@@ -13,6 +13,9 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            url "http://maven.ituns.org/repository/maven-public/"
+        }
     }
 }
 
