--- a/gradle.properties
+++ b/gradle.properties
@@ -38,7 +38,7 @@ APPCOMPAT_VERSION=1.2.0
 CONSTRAINT_VERSION=2.0.4
 
 # Deps for library
-ANDROID_DIALOG_VERSION=1.0.0
+ANDROID_DIALOG_VERSION=1.0.0.3-SNAPSHOT
 
 # Publish config
 PUBLICATIONS_GROUPID=org.ituns.android
@@ -46,3 +46,4 @@ REPOSITORIES_RELEASE_NAME=release
 REPOSITORIES_RELEASE_URL=http://maven.ituns.org/repository/maven-public-release/
 REPOSITORIES_SNAPSHOT_NAME=snapshot
 REPOSITORIES_SNAPSHOT_URL=http://maven.ituns.org/repository/maven-public-snapshot/
+systemProp.org.gradle.internal.publish.checksums.insecure = true
